segundo commit avance

--- a/index.html
+++ b/index.html
@@ -6,15 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV-JL</title>
     <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 425px)">
+    <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 480px)">
+    <link rel="stylesheet" href="./css/lap.css" media="(min-width: 1024px)">
 </head>
 <body>
+
+    <div class="menu-btn">
+        <i>33</i>
+    </div>
+
+    <!-- Container -->
     <div class="container">
         <div class="nav-main">
             <figure class="logo">
                 <img src="" alt="logo jl" class="nav-brand">
             </figure>
-            <ul class="nav-menu">
+            <ul class="nav-menu">  <!-- al agregar nav-menu show probamos .nav-main ul.nav-menu.show -->
                 <li>
                     <a href="#">Hero</a>
                 </li>
@@ -26,6 +33,9 @@
                 </li>
                 <li>
                     <a href="#">Contact</a>
+                </li>
+                <li>
+                    <a href="#">More</a>
                 </li>
             </ul>
             <ul class="nav-menu-right">
@@ -74,7 +84,187 @@
                 <a href="#">Learn More <i> >> icon</i></a>
             </div>
         </div>
+
+        <!-- Cards Banner One -->
+        <div class="cards-banner-one">
+            <div class="content">
+                <h2>Lorem, ipsum dolor.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fugit eum accusantium et cupiditate architecto obcaecati quis quos, neque ullam?</p>
+                <a href="#" class="btn">Learn More <i> >> </i></a>
+            </div>
+        </div>
+
+        <!-- News Cards -->
+        <div class="news-cards">
+            <div>
+                <img src="./assets/images/104452915.jpg" alt="news 1">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptatibus commodi dolorem incidunt facere quasi aliquam ipsam maiores, distinctio alias!</p>
+                <a href="#">Learn More <i> >> icon</i></a>
+            </div>
+            <div>
+                <img src="./assets/images/tumblr_ngr0x9gAqy1tcrgpso1_500.jpg" alt="news 2">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptatibus commodi dolorem incidunt facere quasi aliquam ipsam maiores, distinctio alias!</p>
+                <a href="#">Learn More <i> >> icon</i></a>
+            </div>
+            <div>
+                <img src="./assets/images/117303184.jpg" alt="news 3">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptatibus commodi dolorem incidunt facere quasi aliquam ipsam maiores, distinctio alias!</p>
+                <a href="#">Learn More <i> >> icon</i></a>
+            </div>
+            <div>
+                <img src="./assets/images/33546092.jpg" alt="news 4">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptatibus commodi dolorem incidunt facere quasi aliquam ipsam maiores, distinctio alias!</p>
+                <a href="#">Learn More <i> >> icon</i></a>
+            </div>
+        </div>
+
+        <!-- cards-banner-two -->
+        <div class="cards-banner-two">
+            <div class="content">
+                <h2>Lorem, ipsum dolor.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est doloribus consequatur enim error provident natus reprehenderit recusandae accusantium labore esse perspiciatis ad, voluptatem, sint in officiis itaque velit vero dicta.</p>
+                <a href="#" class="btn">Learn More <i> >> </i></a>
+            </div>
+        </div>
+
+        <!-- Social -->
+        <div class="social">
+            <p>Follow TechNews</p>
+            <div class="links">
+                <a href="#">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="#">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="#">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+            </div>
+        </div>
     </div>
-    
+
+    <!-- Footer-links -->
+    <div class="footer-links">
+        <div class="footer-container">
+            <!-- columna 1 -->
+            <ul>
+                <li>
+                    <a href="#">
+                        <h3>Title One</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+            </ul>
+            <!-- columna 2 -->
+            <ul>
+                <li>
+                    <a href="#">
+                        <h3>Title two</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+            </ul>
+            <!-- columna 3 -->
+            <ul>
+                <li>
+                    <a href="#">
+                        <h3>Title Thre</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+            </ul>
+            <!-- columna 4 -->
+            <ul>
+                <li>
+                    <a href="#">
+                        <h3>Title Four</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <h3>By Deer</h3>
+    </footer>
+
+    <!-- script -->
+    <script src="main.js"></script>
+
 </body> 
 </html>
