--- a/index.html
+++ b/index.html
@@ -263,7 +263,10 @@
         <h3>By Deer</h3>
     </footer>
 
-    <!-- script -->
+    <!-- Scroll reveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- script custom js-->
     <script src="main.js"></script>
 
 </body> 
